<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fab"
    android:orientation="horizontal">

    <RadioGroup android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myRadioGroup"
        android:background="#fcfcfc"
        android:checkedButton="@+id/sound"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Majestic"
        android:id="@+id/radioButton"
        android:layout_marginTop="100dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Half"
        android:id="@+id/radioButton2" />

    <RadioButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Fujian"
        android:id="@+id/radioButton3" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Oval"
        android:id="@+id/radioButton4" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CubbonPArk"
        android:id="@+id/radioButton5" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GlaciarBay"
        android:id="@+id/radioButton6"
        android:layout_gravity="center_vertical" />
</RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/B1"
        android:text="@string/OK"
        android:layout_below="@+id/myRadioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />

</RelativeLayout>
